--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-status-bar": "~2.0.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.4.14"
   },
   "private": true
 }
