--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest",
     "tailwindcss": "^3.4.14"
   },
   "private": true
