--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Wchat",
     "slug": "Wchat",
-    "scheme": "Wchat",
+    "scheme": "[wchat]",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
