--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Wchat",
     "slug": "Wchat",
-    "scheme": "[wchat]",
+    "scheme": "wchat",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,10 +22,10 @@
         {
           "action": "VIEW",
           "data": [
-            {
-              "scheme": "https",
-              "host": "api.whatsapp.com"
-            }
+            { "scheme": "wchat", "host": "*" },
+            { "scheme": "https", "host": "api.whatsapp.com" },
+            { "scheme": "https", "host": "*.wa.me" },
+            { "scheme": "https", "host": "play.google.com", "pathPrefix": "/store/apps/details" }
           ],
           "category": ["BROWSABLE", "DEFAULT"]
         }
