--- a/package.json
+++ b/package.json
@@ -14,21 +14,19 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "expo": "~52.0.23",
     "expo-constants": "~17.0.3",
+    "expo-intent-launcher": "~12.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "expo-intent-launcher": "~12.0.1"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
